--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write {components/**/*,pages/**/*,styles/**/*}.{js,jsx,ts,tsx,json,scss}",
+    "ts-lint": "tsc --noEmit --incremental --watch"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -17,8 +19,13 @@
     "@types/node": "18.11.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "antd": "^4.23.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
