--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "firebase": "^9.12.1",
+    "next-auth": "4.0.0-beta.7",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "react-responsive": "^9.0.0",
