--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "4.0.0-beta.7",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "react-moment": "^1.1.2",
     "react-responsive": "^9.0.0",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
